Fixed spacing issues in about, index html

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,42 @@
 #content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+    height:100%;
+    width:100%;
 }
 
 #greeting-container {
   margin-top: 20px;
+}
+
+.toolbar {
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 200px;
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+    align-items: center;
+    width: 100%;
+}
+
+.toolbar-links {
+    margin-right: "100px";
+    color: #0a2342;
+    font-size: 40px;
+    font-family: "Courier New";
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a { 
+    color: inherit;
+    display: inline-block;
+    text-decoration: none;
+   
+} 
+
+.icons-links {
+    margin-left: auto;
+    padding-right: 100px;
 }
